# projet2_MS01

./: .gitignore  CMakeLists.txt  README.md  lancer_simulations.zsh  lancer_simulations_tp2.zsh  lancer_simulations_tp3.zsh  run_q5.py  run_q6.py  run_tp1-q5.py  run_tp1-q6.py  run_tp2-q2.py  run_tp2-q3.py
example/: example  example.cpp  makefile  output.sol
femtool/: coomatrix.hpp  element.hpp  fematrix.hpp  femtool.hpp  fespace.hpp  iterativesolver.hpp  mesh.hpp  partition.hpp  preconditioner.hpp  smallvector.hpp
graphes/: run_tp1-q5.py  run_tp1-q6.py  run_tp2-q2.py  run_tp2-q3.py
results_CG/: results_h_0.005.csv  results_h_0.025.csv  results_h_0.05.csv
results_PCG/: results_h_0.001.csv  results_h_0.0025.csv  results_h_0.01.csv  results_h_0.025.csv
solutions/: generer_carre.geo  lancer_maillages.zsh  mesh_h_0.01_partition4.msh  tp1-1-output.sol  tp1-1.geo  tp1-2-mauvais.geo  tp1-2-output.sol  tp1-2.geo
source/: tp1-1.cpp  tp1-2.cpp  tp1-ex2.cpp  tp1-ex2CG.cpp  tp1-exo1.cpp  tp1-exo2.cpp  tp2-ex1.cpp  tp2-ex2.cpp  tp2-exo1.cpp  tp2-exo2.cpp  tp3-ex1.cpp  tp3-exo1.cpp  tp3-exo3.cpp
tp/graphes/: run_tp1-q5.py  run_tp1-q6.py  run_tp2-q2.py  run_tp2-q3.py  run_tp3-exo3-q1.py  run_tp3-exo3-q2.py
tp/results_CG/: results_h_0.001.csv  results_h_0.0025.csv  results_h_0.01.csv
tp/results_PCG/: results_h_0.005.csv  results_h_0.05.csv
tp/results_PCG-AS/: results_h_0.001.csv  results_h_0.0025.csv  results_h_0.005.csv  results_h_0.01.csv  results_h_0.025.csv  results_h_0.05.csv
tp/solutions/: tp1-2.geo
