cmake_minimum_required(VERSION 4.1)
project(tp1)

add_executable(tp1-1 source/tp1-1.cpp)
target_include_directories(tp1-1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp1-1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp1-1 PRIVATE cxx_std_23)
target_compile_options(tp1-1 PRIVATE -Wall -fsanitize=address)
target_link_options(tp1-1 PRIVATE -fsanitize=address)

add_executable(tp1-2 source/tp1-2.cpp)
target_include_directories(tp1-2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp1-2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp1-2 PRIVATE cxx_std_23)
target_compile_options(tp1-2 PRIVATE -Wall -fsanitize=address)
target_link_options(tp1-2 PRIVATE -fsanitize=address)

add_executable(tp1-ex2 source/tp1-ex2.cpp)
target_include_directories(tp1-ex2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp1-ex2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp1-ex2 PRIVATE cxx_std_23)
target_compile_options(tp1-ex2 PRIVATE -Wall -fsanitize=address)
target_link_options(tp1-ex2 PRIVATE -fsanitize=address)

add_executable(solveur source/tp1-ex2CG.cpp)
target_include_directories(solveur PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(solveur PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(solveur PRIVATE cxx_std_23)
target_compile_options(solveur PRIVATE -Wall -fsanitize=address)
target_link_options(solveur PRIVATE -fsanitize=address)
