cmake_minimum_required(VERSION 4.1)
project(tp1)

add_executable(tp1-1 source/tp1-1.cpp)
target_include_directories(tp1-1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp1-1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp1-1 PRIVATE cxx_std_23)
target_compile_options(tp1-1 PRIVATE -Wall -fsanitize=address)
target_link_options(tp1-1 PRIVATE -fsanitize=address)

add_executable(tp1-2 source/tp1-2.cpp)
target_include_directories(tp1-2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp1-2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp1-2 PRIVATE cxx_std_23)
target_compile_options(tp1-2 PRIVATE -Wall -fsanitize=address)
target_link_options(tp1-2 PRIVATE -fsanitize=address)

add_executable(tp1-ex2 source/tp1-ex2.cpp)
target_include_directories(tp1-ex2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp1-ex2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp1-ex2 PRIVATE cxx_std_23)
target_compile_options(tp1-ex2 PRIVATE -Wall -fsanitize=address)
target_link_options(tp1-ex2 PRIVATE -fsanitize=address)

add_executable(tp1-ex2CG source/tp1-ex2CG.cpp)
target_include_directories(tp1-ex2CG PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp1-ex2CG PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp1-ex2CG PRIVATE cxx_std_23)
target_compile_options(tp1-ex2CG PRIVATE -Wall -fsanitize=address)
target_link_options(tp1-ex2CG PRIVATE -fsanitize=address)

add_executable(tp2-ex1 source/tp2-ex1.cpp)
target_include_directories(tp2-ex1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp2-ex1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp2-ex1 PRIVATE cxx_std_23)
target_compile_options(tp2-ex1 PRIVATE -Wall -fsanitize=address)
target_link_options(tp2-ex1 PRIVATE -fsanitize=address)

add_executable(tp2-ex2 source/tp2-ex2.cpp)
target_include_directories(tp2-ex2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp2-ex2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp2-ex2 PRIVATE cxx_std_23)
target_compile_options(tp2-ex2 PRIVATE -Wall -fsanitize=address)
target_link_options(tp2-ex2 PRIVATE -fsanitize=address)

add_executable(tp3-ex1 source/tp3-ex1.cpp)
target_include_directories(tp3-ex1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp3-ex1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp3-ex1 PRIVATE cxx_std_23)
target_compile_options(tp3-ex1 PRIVATE -Wall -fsanitize=address)
target_link_options(tp3-ex1 PRIVATE -fsanitize=address)