cmake_minimum_required(VERSION 4.1)
project(tp1)

add_executable(tp1-exo1 source/tp1-exo1.cpp)
target_include_directories(tp1-exo1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp1-exo1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp1-exo1 PRIVATE cxx_std_23)
target_compile_options(tp1-exo1 PRIVATE -Wall -fsanitize=address)
target_link_options(tp1-exo1 PRIVATE -fsanitize=address)

add_executable(tp1-exo2 source/tp1-exo2.cpp)
target_include_directories(tp1-exo2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp1-exo2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp1-exo2 PRIVATE cxx_std_23)
target_compile_options(tp1-exo2 PRIVATE -Wall -fsanitize=address)
target_link_options(tp1-exo2 PRIVATE -fsanitize=address)

add_executable(tp2-exo1 source/tp2-exo1.cpp)
target_include_directories(tp2-exo1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp2-exo1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp2-exo1 PRIVATE cxx_std_23)
target_compile_options(tp2-exo1 PRIVATE -Wall -fsanitize=address)
target_link_options(tp2-exo1 PRIVATE -fsanitize=address)

add_executable(tp2-exo2 source/tp2-exo2.cpp)
target_include_directories(tp2-exo2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp2-exo2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp2-exo2 PRIVATE cxx_std_23)
target_compile_options(tp2-exo2 PRIVATE -Wall -fsanitize=address)
target_link_options(tp2-exo2 PRIVATE -fsanitize=address)

add_executable(tp3-exo1 source/tp3-exo1.cpp)
target_include_directories(tp3-exo1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp3-exo1 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp3-exo1 PRIVATE cxx_std_23)
target_compile_options(tp3-exo1 PRIVATE -Wall -fsanitize=address)
target_link_options(tp3-exo1 PRIVATE -fsanitize=address)


add_executable(tp3-exo3 source/tp3-exo3.cpp)
target_include_directories(tp3-exo3 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/femtool)
target_include_directories(tp3-exo3 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
target_compile_features(tp3-exo3 PRIVATE cxx_std_23)
target_compile_options(tp3-exo3 PRIVATE -Wall -fsanitize=address)
target_link_options(tp3-exo3 PRIVATE -fsanitize=address)